fix streached header logo on mobile and safari

--- a/ckanext/cioos_theme/public/hakai.css
+++ b/ckanext/cioos_theme/public/hakai.css
@@ -366,5 +366,5 @@ padding-right:0px;
 
 .masthead .logo img {
     max-height: 60px;
-    width: 100%;
+    /* width: 100%; */
 }
